--- a/web.html
+++ b/web.html
@@ -178,7 +178,7 @@ Per conèixer millor quines són aquestes competències, Barcelona Activa oferei
 </div>
 
 <div class="imatge-centre">
-  <img src="img/clau.png" alt="competencies_clau">
+  <img src="clau.png" alt="competencies_clau">
 </div>
 
 
@@ -190,7 +190,7 @@ Per conèixer millor quines són aquestes competències, Barcelona Activa oferei
  <section id="cv">
   <h2>CV Competencial</h2>
   <div class="curriculum-wrapper">
-    <img src="img/curriculuum.png" alt="Currículum competencial" class="curriculum-img">
+    <img src="curriculuum.png" alt="Currículum competencial" class="curriculum-img">
   </div>
 </section>
 
@@ -250,7 +250,7 @@ Per conèixer millor quines són aquestes competències, Barcelona Activa oferei
 
   <div style="flex: 1; text-align: right;">
     <a href="https://www.linkedin.com/in/victor-benjumea-294892365/" target="_blank" rel="noopener">
-      <img src="img/linkedin.png" alt="LinkedIn" style="height: 40px; vertical-align: middle;">
+      <img src="linkedin.png" alt="LinkedIn" style="height: 40px; vertical-align: middle;">
     </a>
   </div>
 
